# voxcpm2-c

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: ci.yml
benchmarks/: bench_rtf.c
docs/: ALGORITHMS.md  ARCHITECTURE.md  WEIGHT_FORMAT.md
examples/: tts_minimal.c  voice_clone.c
include/: audio.h  model.h  nn.h  platform.h  sampler.h  tensor.h  tokenizer.h  voxcpm.h
python/: voxcpm2.py
scripts/: check.mjs  convert_tokenizer.py  convert_weights.py  download_model.sh  gen_test_data.py  quantize.py  run_benchmark.sh
src/: audio.c  audio_vae.c  loc_dit.c  loc_enc.c  main.c  model.c  nn.c  platform.c  ralm.c  sampler.c  tensor.c  tensor_cuda.cu  tokenizer.c  tslm.c  utils.c
tests/: test_audio.c  test_tensor.c  test_tokenizer.c
